src/k8s/dex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  namespace: dex
  annotations:
    cert-manager.io/cluster-issuer: levizitting-ca
    traefik.ingress.kubernetes.io/router.middlewares: dex-dex-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - sso.levizitting.com
      secretName: dex-tls
  rules:
    - host: sso.levizitting.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dex
                port:
                  number: 5556
